--- a/SGE/Views/Shared/_Layout.cshtml
+++ b/SGE/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="~/SGE.styles.css" asp-append-version="true" />
 
 </head>
-<body class="bg-white">
+<body class="bg-info">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white mx-5 mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light mx-5 mb-3" style="background-color: rgb(255, 255, 255, 255, 0.0)">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bolder" style="color:#2E75D3; font-size: 25px" asp-area="" asp-controller="Home" asp-action="Index">AppEscola</a>
+                <a class="navbar-brand fw-bolder" style="color:#fff; font-size: 25px" asp-area="" asp-controller="Home" asp-action="Index">AppEscola</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
                     <ul class="d-flex justify-content-center navbar-nav flex-grow-1" style="font-size:19px; gap:2em;">
 
                         <li class="nav-item">
-                            <a class="nav-link" style="color:#2E75D3; font-weight:400" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuários</a>
+                            <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuários</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color:#2E75D3; font-weight:400" asp-area="" asp-controller="Alunos" asp-action="Index">Alunos</a>
+                            <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="Alunos" asp-action="Index">Alunos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color:#2E75D3; font-weight:400" asp-area="" asp-controller="Turmas" asp-action="Index">Turmas</a>
+                            <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="Turmas" asp-action="Index">Turmas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color:#2E75D3; font-weight:400" asp-area="" asp-controller="ReservasSala" asp-action="Reservas">Reservas de Sala</a>
+                            <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="ReservasSala" asp-action="Reservas">Reservas de Sala</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color:#2E75D3; font-weight:400" asp-area="" asp-controller="Ocorrencias" asp-action="ListaOcorrencias">Boletim de Ocorrências</a>
+                            <a class="nav-link" style="color:#fff; font-weight:400" asp-area="" asp-controller="Ocorrencias" asp-action="ListaOcorrencias">Boletim de Ocorrências</a>
                         </li>
                         @*<li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="TiposUsuario" asp-action="Index">Tipos de Usuários</a>
@@ -109,7 +109,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted text-dark">
+    <footer style="border-top:1px solid #A2A2A2;" class=" footer text-muted text-black">
         <div class="d-flex justify-content-center align-content-center">
             &copy; 2024 - SGE 
         </div>
