Alterações em Aula no dia 08-03

--- a/SGE/Views/AlunosTurma/ListaAlunos.cshtml
+++ b/SGE/Views/AlunosTurma/ListaAlunos.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container">
     <p>
-        <a asp-controller="Turmas" asp-action="Create">Criar Turma </a>
+        <a asp-controller="Turmas" asp-action="Create">Criar TUr </a>
     </p>
 
     <h1 class="text-center">Matrículas por Turma</h1>
