--- a/SGE/Views/Ocorrencias/EditarOcorrencia.cshtml
+++ b/SGE/Views/Ocorrencias/EditarOcorrencia.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "EditarOcorrencia";
 }
 
-<h1>AdicionarOcorrencia</h1>
+<h1>Editar Ocorrencia</h1>
 
 <h4>Ocorrencia</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AdicionarOcorrencia">
+        <form asp-action="EditarOcorrencia" asp-route-id="@Model.OcorrenciaId">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TipoOcorrenciaId" class="control-label"></label>
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="CadAtivo" checked="checked" /> @Html.DisplayNameFor(model => model.CadAtivo)
+                    <input class="form-check-input" asp-for="CadAtivo" value="@Model.CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
                 </label>
             </div>
             <div class="form-group">
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Finalizado" /> @Html.DisplayNameFor(model => model.Finalizado)
+                    <input class="form-check-input" asp-for="Finalizado" value="@Model.Finalizado" /> @Html.DisplayNameFor(model => model.Finalizado)
                 </label>
             </div>
             <div class="form-group">
@@ -69,7 +69,7 @@
                 <span asp-validation-for="Tratativa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Salvar Resposta" class="btn btn-primary" />
             </div>
         </form>
     </div>
