--- a/SGE/Views/Usuarios/Index.cshtml
+++ b/SGE/Views/Usuarios/Index.cshtml
@@ -6,38 +6,39 @@
 
 <div>
     <div class="d-flex row justify-content-between my-5">
-        <div class="col-2">
+        <div style="width: 15%;">
             <img src="https://placehold.co/200x150" />
         </div>
-        <div class="col-10 ps-5">
+        <div style="width: 85%;" class="ps-5">
             <div class="d-flex row align-items-center justify-content-between">
-                <h1 class="col-3" style="font-size:3.2rem; color:#F6D524;">Usuários</h1>
-                <hr class="col-9" style="border: solid 3px rgba(246, 213, 36, 1);" />
+                <h1 style="width:25%; font-size:3.2rem; color:#F6D524;">Usuários</h1>
+                <div style="height:5px; width:75%; background:#F6D524;" />
             </div>
             <p style="font-size:1.5rem; color:#2E75D3;">Visualize quem tem acesso à ferramenta SGE</p>
         </div>
     </div>
-    <div class="d-flex row justify-content-between">
-        <div class="col-4">
-            <div class="d-flex justify-content-between align-items-center ">
+
+    <div class="d-flex row justify-content-between" style="width:100%;">
+        <div style="width:40%;">
+            <div class="d-flex justify-content-between">
                 <h2 style="font-size:2rem; color:#2E75D3;">Tipos de Usuários</h2>
                 <button class="btn">
                     <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#2e75d3"></svg>
                 </button>
             </div>
             <div>
-                tabela
+                Tabela
             </div>
         </div>
-        <div class="col-7">
-            <div class="d-flex justify-content-between align-items-center">
+        <div style="width:55%;">
+            <div class="d-flex justify-content-between">
                 <h2 style="font-size:2rem; color:#2E75D3;">Usuários Cadastrados</h2>
                 <button class="btn">
                     <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#2e75d3"></svg>
                 </button>
             </div>
             <div>
-                Pesquisa
+                Barra de pesquisa
             </div>
             <div>
                 Tabela
