--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -23,16 +23,24 @@ body {
 
 /*Página Home*/
 
-.buttonAzul {
-    border: 4px solid #2E75D3;
+.botaoBranco {
+    border: 4px solid #fff;
     border-radius: 20px;
     background: none;
     
-    color: #2E75D3;
+    color: #fff;
     text-align: center;
+
+    align-items: center;
 }
 
     .buttonAzul:hover {
-        background: #2E75D3;
-        color: #fff;
+        background: #fff;
+        color: #2E75D3;
     }
+
+.blocoTransparente{
+    background: rgba(255, 255, 255, 0.3);
+    color: #fff;
+    height:fit-content;
+}
