--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -21,6 +21,24 @@ body {
     margin-bottom: 60px;
 }
 
+.navBar{
+    margin:0em 3.7em;
+    background: red;
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+}
+
+.navLinks ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 3em;
+}
+
+
+
+
 /*Página Home*/
 
 .botaoBranco {
