Alterações no Index das páginas principais.

--- a/SGE/Views/Shared/_Layout.cshtml
+++ b/SGE/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="~/SGE.styles.css" asp-append-version="true" />
 
 </head>
-<body class="bg-info">
+<body class="Background">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light mx-5 mb-3" style="background-color: rgb(255, 255, 255, 255, 0.0)">
             <div class="container-fluid">
