--- a/SGE/Views/Alunos/Index.cshtml
+++ b/SGE/Views/Alunos/Index.cshtml
@@ -18,24 +18,27 @@
         </div>
         <div style="width: 85%;" class="ps-5">
             <div class="d-flex row align-items-center justify-content-between">
-                <h1 style="width:25%; font-size:3.2rem; color:#F6D524;">Alunos</h1>
-                <div style="height:5px; width:75%; background:#F6D524;" />
+                <h1 style="width:21%; font-size:3.2rem; color:#F6D524;">Alunos</h1>
+                <div style="height:5px; width:79%; background:#F6D524;" />
             </div>
-            <p style="font-size:1.5rem; color:#2E75D3;">Gerencie os alunos cadastrados, registre novos alunos, edite ou delete informações. </p>
+            <p style="font-size:1.5rem; color:#fff;">Gerencie os alunos cadastrados, registre novos alunos, edite ou delete informações. </p>
         </div>
     </div>
 
-    <div class="d-flex justify-content-between" style="width:100%;">
-        <div>
-            <div style="width:40%;">
-
+    <div class="justify-content-between mt-5" style="width:100%;">
+        <div class="d-flex row align-items-center" style="width:100%;">
+            <div style="width:40%;" class="d-flex justify-content-between align-items-center">
+                <h2 style="font-size:2rem; color:#fff;">Alunos Cadastrados</h2>
+                <button class="btn">
+                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
+                </button>
             </div>
             <div style="width:60%;">
                 Barra de Pesquisa
             </div>
         </div>
-        <div>
-           
+        <div style="width:100%;">
+           Tabela
         </div>
     </div>
 </div>
