--- a/SGE/Views/ReservasSala/Reservas.cshtml
+++ b/SGE/Views/ReservasSala/Reservas.cshtml
@@ -8,6 +8,37 @@
 
 }
 
+<div>
+    <div class="d-flex row justify-content-between my-5">
+        <div style="width: 15%;">
+            <img src="https://placehold.co/200x150" />
+        </div>
+        <div style="width: 85%;" class="ps-5">
+            <div class="d-flex row align-items-center justify-content-between">
+                <h1 style="width:18%; font-size:3.2rem; color:#F6D524;">Salas</h1>
+                <div style="height:5px; width:82%; background:#F6D524;" />
+            </div>
+            <p style="font-size:1.5rem; color:#fff;">Administre as reservas de salas.</p>
+        </div>
+    </div>
+
+    <div class="justify-content-between my-5" style="width:100%;">
+        <div class="d-flex row align-items-center" style="width:100%;">
+            <div style="width:40%;" class="d-flex justify-content-between align-items-center">
+                <h2 style="font-size:2rem; color:#fff;">Salas Cadastradas</h2>
+                <button class="btn">
+                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
+                </button>
+            </div>
+            <div style="width:60%;">
+                Barra de Pesquisa
+            </div>
+        </div>
+        <div style="width:100%;">
+            Tabela
+        </div>
+    </div>
+</div>
 
 <div class="container">
 
@@ -76,11 +107,13 @@
 
             @if (ViewData["SalaSelecionada"] != null)
             {
-                <h2>
-                    <strong>Reservas da Sala:</strong>
-                    <span>@ViewData["SalaSelecionada"]</span>
-                </h2>
-                <a asp-action="NovaReserva" asp-route-id="@ViewData["IdSalaSelecionada"]" class="btn btn-primary px-5 py-3">Nova Reserva</a>
+                <div class="d-flex justify-content-between" style="width:100%;">
+                    <div class="d-flex justify-content-start" style="width:70%;">
+                        <h2 style="font-size:2rem; color:#fff;">Reservas da Sala:</h2>
+                        <p style="background:none; border: none; border-bottom: 1px solid #fff; color: gray; width:40%" class="ms-3">@ViewData["SalaSelecionada"]</p>
+                    </div>
+                    <a asp-action="NovaReserva" asp-route-id="@ViewData["IdSalaSelecionada"]" class="btn botaoBranco2" style="width:20%;">Nova Reserva</a>
+                </div>
             }
         </div>
     </div>
@@ -89,7 +122,7 @@
     {
         <div class="row mb-3">
             <div class="col-md-6">
-                <select id="month" class="form-control">
+                <select id="month" class="headerTabela textoHeaderTabela">
                     @foreach (var month in months)
                     {
                         <option value="@month">@DateTimeFormatInfo.CurrentInfo.GetMonthName(month)</option>
@@ -97,7 +130,7 @@
                 </select>
             </div>
             <div class="col-md-6">
-                <select id="year" class="form-control">
+                <select id="year" class="headerTabela textoHeaderTabela">
                     @foreach (var year in years)
                     {
                         <option value="@year">@year</option>
