--- a/SGE/Views/Turmas/Index.cshtml
+++ b/SGE/Views/Turmas/Index.cshtml
@@ -4,7 +4,58 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div>
+    <div class="d-flex row justify-content-between my-5">
+        <div style="width: 15%;">
+            <img src="https://placehold.co/200x150" />
+        </div>
+        <div style="width: 85%;" class="ps-5">
+            <div class="d-flex row align-items-center justify-content-between">
+                <h1 style="width:22%; font-size:3.2rem; color:#F6D524;">Turmas</h1>
+                <div style="height:5px; width:78%; background:#F6D524;" />
+            </div>
+            <p style="font-size:1.5rem; color:#fff;">Gerencie as turmas da sua instituição.</p>
+        </div>
+    </div>
+
+    <div class="justify-content-between my-5" style="width:100%;">
+        <div class="d-flex row align-items-center" style="width:100%;">
+            <div style="width:40%;" class="d-flex justify-content-between align-items-center">
+                <h2 style="font-size:2rem; color:#fff;">Todas as Turmas</h2>
+                <button class="btn">
+                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
+                </button>
+            </div>
+            <div style="width:60%;">
+                Barra de Pesquisa
+            </div>
+        </div>
+        <div style="width:100%;">
+            Tabela
+        </div>
+    </div>
+
+    <div class="my-5" stye="width:100%;">
+        <div class="d-flex justify-content-start align-items-center">
+            <h2 style="font-size:2rem; color:#fff;">Turma:</h2>
+            <input type="text" placeholder="Selecionar turma" style="background:none; border: none; border-bottom: 1px solid #fff;" class="ps-3 ms-3"/>
+        </div>
+        <div class="d-flex row justify-content-between mt-3">
+            <div style="width:50%;">
+                <h3 style="font-size:1rem; color:#fff;">Alunos Matriculados</h3>
+                <div>
+                    Tabela
+                </div>
+            </div>
+            <div style="width:50%;">
+                <h3 style="font-size:1rem; color:#fff;">Adicionar Alunos:</h3>
+                <div>
+                    Tabela
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <p>
     <a asp-action="Create">Create New</a>
