--- a/SGE/Views/Usuarios/Index.cshtml
+++ b/SGE/Views/Usuarios/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    <div class="d-flex row justify-content-between my-5">
+    <div class="d-flex row justify-content-between my-5 mb-5">
         <div style="width: 15%;">
             <img src="https://placehold.co/200x150" />
         </div>
@@ -14,16 +14,16 @@
                 <h1 style="width:25%; font-size:3.2rem; color:#F6D524;">Usuários</h1>
                 <div style="height:5px; width:75%; background:#F6D524;" />
             </div>
-            <p style="font-size:1.5rem; color:#2E75D3;">Visualize quem tem acesso à ferramenta SGE</p>
+            <p style="font-size:1.5rem; color:#fff;">Visualize quem tem acesso à ferramenta SGE</p>
         </div>
     </div>
 
-    <div class="d-flex row justify-content-between" style="width:100%;">
+    <div class="d-flex row justify-content-between mt-5" style="width:100%;">
         <div style="width:40%;">
-            <div class="d-flex justify-content-between">
-                <h2 style="font-size:2rem; color:#2E75D3;">Tipos de Usuários</h2>
+            <div class="d-flex justify-content-between align-items-center">
+                <h2 style="font-size:2rem; color:#fff;">Tipos de Usuários</h2>
                 <button class="btn">
-                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#2e75d3"></svg>
+                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
                 </button>
             </div>
             <div>
@@ -31,10 +31,10 @@
             </div>
         </div>
         <div style="width:55%;">
-            <div class="d-flex justify-content-between">
-                <h2 style="font-size:2rem; color:#2E75D3;">Usuários Cadastrados</h2>
+            <div class="d-flex justify-content-between align-items-center">
+                <h2 style="font-size:2rem; color:#fff;">Usuários Cadastrados</h2>
                 <button class="btn">
-                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#2e75d3"></svg>
+                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
                 </button>
             </div>
             <div>
