--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -15,7 +15,25 @@
 
 }
 
-<h1>Boletim de Ocorrências</h1>
+<div>
+    <div class="d-flex row justify-content-between my-5">
+        <div style="width: 15%;">
+            <img style="max-width:200px" />
+        </div>
+        <div style="width: 85%;" class="ps-5">
+            <div class="d-flex row align-items-center justify-content-between">
+                <h1 style="width:35%; font-size:3.2rem; color:#F6D524;">Ocorrências</h1>
+                <div style="height:5px; width:65%; background:#F6D524;" />
+            </div>
+            <p style="font-size:1.5rem; color:#fff;">Controle as ocorrências dos alunos.</p>
+        </div>
+    </div>
+
+    <div>
+
+    </div>
+</div>
+
 <p>
     <a asp-controller="TiposOcorrencia" asp-action="Create">Tipos </a>
 </p>
