--- a/SGE/Views/ReservasSala/Reservas.cshtml
+++ b/SGE/Views/ReservasSala/Reservas.cshtml
@@ -11,7 +11,7 @@
 <div>
     <div class="d-flex row justify-content-between my-5">
         <div style="width: 15%;">
-            <img src="https://placehold.co/200x150" />
+            <img style="max-width:200px"/>
         </div>
         <div style="width: 85%;" class="ps-5">
             <div class="d-flex row align-items-center justify-content-between">
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div id="calendar-body">
-                <table class="table table-bordered">
+                <table class="tabelaCalendario" style="width:100%;">
                     <thead id="calendar-weekdays">
                         <tr>
                             <td class="text-center">Dom</td>
