--- a/SGE/Views/Usuarios/Create.cshtml
+++ b/SGE/Views/Usuarios/Create.cshtml
@@ -7,60 +7,64 @@
 <h1>Create</h1>
 
 <h4>Usuario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UsuarioNome" class="control-label"></label>
-                <input asp-for="UsuarioNome" class="form-control" />
-                <span asp-validation-for="UsuarioNome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
-                <span asp-validation-for="Senha" class="text-danger"></span>
-            </div>
 
-            <div class="form-group">
-                <label for="ConfirmeSenha" class="control-label">Confirme a Senha</label>
-                <input id="ConfirmeSenha" type="password" name="ConfirmeSenha" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Celular" class="control-label"></label>
-                <input asp-for="Celular" class="form-control" />
-                <span asp-validation-for="Celular" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="CadAtivo" value="true" /> @Html.DisplayNameFor(model => model.CadAtivo)
-                </label>
-            </div>
-            <div class="form-group">
 
-                <input asp-for="DataCadastro" class="form-control" value=@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss") readonly type="hidden" />
 
-            </div>
-            <div class="form-group">
+<div>
+    <form asp-action="Create" class="d-flex row justify-content-between align-items-end" style="width:100%;">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                <input asp-for="CadInativo" class="form-control" type="hidden" />
+        <div class="col-4 my-1">
+            <input asp-for="UsuarioNome" class="headerTabela textoHeaderTabela" placeholder="Nome do Usuário" />
+            <span asp-validation-for="UsuarioNome" class="text-danger"></span>
+        </div>
 
+        <div class="col-4 my-1">
+            <input asp-for="Email" class="headerTabela textoHeaderTabela" placeholder="Email do Usuário" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <div class="col-4 my-1">
+            <div class="d-flex flex-row">
+                <select asp-for="TipoUsuarioId" class="headerTabela textoHeaderTabela" asp-items="ViewBag.TipoUsuarioId"></select>
+                <button style="width:30%;" class=""> Novo Tipo </button>
             </div>
-            <div class="form-group">
-                <label asp-for="TipoUsuarioId" class="control-label"></label>
-                <select asp-for="TipoUsuarioId" class="form-control" asp-items="ViewBag.TipoUsuarioId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+        </div>
+
+        <div class="col-2 my-1">
+            <input asp-for="Celular" class="headerTabela textoHeaderTabela" placeholder="Celular do Usuário" />
+            <span asp-validation-for="Celular" class="text-danger"></span>
+        </div>
+
+        <div class="col-3 my-1">
+            <input asp-for="Senha" class="headerTabela textoHeaderTabela" placeholder="Defina uma senha" />
+            <span asp-validation-for="Senha" class="text-danger"></span>
+        </div>
+
+        <div class="col-3 my-1">
+            <input id="ConfirmeSenha" type="password" name="ConfirmeSenha" class="headerTabela textoHeaderTabela" placeholder="Confirme sua senha" />
+        </div>
+
+        <div class="col-2 form-check my-1">
+            <label class="textoBrancoForm" style="height:100%; width:100%; align-items:center;">
+                <input class="form-check-input" asp-for="CadAtivo" value="true" /> @Html.DisplayNameFor(model => model.CadAtivo)
+            </label>
+        </div>
+
+        <div class="col-2 my-1">
+            <input type="submit" value="Cadastrar" class="btn botaoBranco2" style="width:100%;" />
+        </div>
+
+        <div class="">
+            <input asp-for="DataCadastro" class="form-control" value=@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss") readonly type="hidden" />
+        </div>
+
+        <div class="">
+            <input asp-for="CadInativo" class="form-control" type="hidden" />
+        </div>
+
+        
+    </form>
 </div>
 
 <div>
