--- a/SGE/Views/TiposUsuario/Index.cshtml
+++ b/SGE/Views/TiposUsuario/Index.cshtml
@@ -25,8 +25,8 @@
                 @Html.DisplayFor(modelItem => item.Tipo)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TipoUsuarioId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TipoUsuarioId">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.TipoUsuarioId">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.TipoUsuarioId">Details</a> 
                 <a asp-action="Delete" asp-route-id="@item.TipoUsuarioId">Delete</a>
             </td>
         </tr>
