--- a/SGE/Views/Home/Login.cshtml
+++ b/SGE/Views/Home/Login.cshtml
@@ -14,6 +14,7 @@
 	</div>
 }
 
+<div style="display:flex; align-items:center; justify-content:center;">
 <div class="cardLogin">
 	<div class="inicioText">
 		<h5 style="font-size:22px; color:white; font-weight: 600;">Para continuar, acesse a sua </h5>
@@ -34,4 +35,6 @@
 			</div>
 		</form>
 	</div>
+</div>
+
 </div>
