--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -24,8 +24,9 @@ body {
 }
 
 .cardLogin {
+    margin-top: 3em;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
@@ -33,9 +34,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     opacity: 1;
-    margin-left: 14.9em;
     width: 800px;
-    margin-top: 7.5em;
     padding: 0em 4em;
 }
 
@@ -84,6 +83,12 @@ body {
     /*background-color: #F6D524;*/
     /*background-color: white;*/
     background-color: rgba(255, 255, 255, 0.3);
+    width: 100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height: 4em;
+    margin-top: 2em;
 }
 
 .navBar{
@@ -124,3 +129,46 @@ body {
     color: #fff;
     height:fit-content;
 }
+
+/*Create Usuários*/
+
+.styleCreateUsuarios{
+    
+}
+
+
+/*Alunos*/
+.tableAlunosTop{
+    display:flex;
+    align-items:center;
+    justify-content:space-around;
+    width:100%;
+    color: white;
+    margin: 2em 0em;
+}
+
+.tableAlunosTop h3{
+    font-size:35px;
+    font-weight: 400;
+}
+
+.tableAlunosTop input::placeholder{
+    color:white;
+}
+
+.tabelaAluno {
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    padding:1em;
+    width:100%;
+}
+
+.tabelaAluno th{
+    gap: 1em;
+    padding:0.5em;
+}
+
+.tabelaAluno td{
+    padding: 0.5em;
+}
+
