--- a/SGE/Views/Alunos/Index.cshtml
+++ b/SGE/Views/Alunos/Index.cshtml
@@ -29,24 +29,18 @@
         <div class="d-flex row align-items-center" style="width:100%;">
             <div style="width:40%;" class="d-flex justify-content-between align-items-center">
                 <h2 style="font-size:2rem; color:#fff;">Alunos Cadastrados</h2>
-                <button class="btn">
-                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
-                </button>
+                <a class="btn" asp-action="Create"><svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg></a>
             </div>
             <div style="width:60%;">
                 Barra de Pesquisa
             </div>
         </div>
         <div style="width:100%;">
-           Tabela
+            Tabela
         </div>
     </div>
 </div>
 
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 
 
 <table class="table">
