--- a/SGE/Views/ReservasSala/Reservas.cshtml
+++ b/SGE/Views/ReservasSala/Reservas.cshtml
@@ -26,9 +26,7 @@
         <div class="d-flex row align-items-center" style="width:100%;">
             <div style="width:40%;" class="d-flex justify-content-between align-items-center">
                 <h2 style="font-size:2rem; color:#fff;">Salas Cadastradas</h2>
-                <button class="btn">
-                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
-                </button>
+                <a class="btn" asp-action="Create" asp-controller="Salas"><svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg></a>
             </div>
             <div style="width:60%;">
                 Barra de Pesquisa
