--- a/SGE/Views/Usuarios/Index.cshtml
+++ b/SGE/Views/Usuarios/Index.cshtml
@@ -22,9 +22,7 @@
         <div style="width:40%;">
             <div class="d-flex justify-content-between align-items-center">
                 <h2 style="font-size:2rem; color:#fff;">Tipos de Usuários</h2>
-                <button class="btn">
-                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
-                </button>
+                <a class="btn" asp-action="Create" asp-controller="TiposUsuario"><svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg></a>
             </div>
             <div>
                 Tabela
@@ -33,9 +31,7 @@
         <div style="width:55%;">
             <div class="d-flex justify-content-between align-items-center">
                 <h2 style="font-size:2rem; color:#fff;">Usuários Cadastrados</h2>
-                <button class="btn">
-                    <svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg>
-                </button>
+                <a class="btn" asp-action="Create"><svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:#fff"></svg></a>
             </div>
             <div>
                 Barra de pesquisa
