--- a/SGE/Views/ReservasSala/Index.cshtml
+++ b/SGE/Views/ReservasSala/Index.cshtml
@@ -37,35 +37,36 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sala.SalaId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.UsuarioId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataReserva)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoraInicio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoraFim)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CadAtivo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CadInativo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ReservaSalaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ReservaSalaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ReservaSalaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sala.SalaId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.UsuarioId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataReserva)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HoraInicio)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HoraFim)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CadAtivo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CadInativo)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ReservaSalaId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ReservaSalaId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ReservaSalaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
