--- a/SGE/Views/Usuarios/Edit.cshtml
+++ b/SGE/Views/Usuarios/Edit.cshtml
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
+                <input asp-for="Senha" value="@Model.Senha" class="form-control" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
 
@@ -51,7 +51,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
+                    <input class="form-check-input" asp-for="CadAtivo" value="@Model.CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
                 </label>
             </div>
             <div class="form-group">
