--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -199,6 +199,15 @@ body {
     align-items: center;
 }
 
+.botaoBranco2 {
+    border: 2px solid #fff;
+    border-radius: 5px;
+    background: none;
+    color: #fff;
+    text-align: center;
+    align-items: center;
+}
+
 .buttonAzul:hover {
     background: #fff;
     color: black;
