--- a/SGE/Views/Alunos/Create.cshtml
+++ b/SGE/Views/Alunos/Create.cshtml
@@ -32,7 +32,7 @@
 }
 
 <div class="">
-    <form asp-action="Create" method="post" enctype="multipart/form-data" class="d-flex row justify-content-between align-items-end" style="width:75%;">
+    <form asp-action="Create" method="post" enctype="multipart/form-data" class="d-flex flex-row row justify-content-between align-items-end" style="width:100%;">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <div class="col-3 my-2">
